# dbt-test-lineage

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.repo-manual/: manual.json  plan.json  structure.json
.repo-manual/index/: edges.json  files.json  symbols.json
.repo-manual/manual/dbt_test_lineage/: dbt_test_lineage.cache.md  dbt_test_lineage.cli.md  dbt_test_lineage.md  dbt_test_lineage.propagate.md  dbt_test_lineage.reports.md  dbt_test_lineage.rules.md  dbt_test_lineage.tests_loader.md  dbt_test_lineage.verdict.md
.repo-manual/manual/overview/: overview.md
.repo-manual/manual/systems/: cli.md  guarantee-model.md  inputs.md  propagation-core.md  reporting.md  ungrouped.md
docs/: CLAUDE.md  architecture.md  index.md  use-cases.md
scripts/: gen_ref_pages.py
src/dbt_test_lineage/: CLAUDE.md  __init__.py  cache.py  cli.py  propagate.py  reports.py  rules.py  tests_loader.py  verdict.py
tests/: CLAUDE.md  eval_harness.py  test_cache.py  test_cli.py  test_confidence.py  test_eval.py  test_loader.py  test_propagate.py  test_reports.py  test_rules.py  test_run_results.py  test_smoke.py  test_unique.py  test_unique_key.py  test_verdict.py
