[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-test-lineage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-column-lineage",
    "typer>=0.26.7",
]

[project.scripts]
dbt-test-lineage = "dbt_test_lineage.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_test_lineage"]

[tool.uv]
# sync dev + docs by default so `uv run mkdocs serve/build` always has mkdocs + plugins available
default-groups = ["dev", "docs"]

# Consume the sibling lineage engine as an editable path dependency (see docs/architecture.md §2).
[tool.uv.sources]
dbt-column-lineage = { path = "../dbt-column-lineage", editable = true }

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]
